--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,34 @@
 version: "3.5"
 services:
-  myzap_2dev:
-    build: 
+  alexandreclayton/myzap2-dev:
+    build:
       context: .
-      target: myzap_2dev
-    container_name: myzap_2dev
+      target: alexandreclayton/myzap2-dev
+    container_name: alexandreclayton/myzap2-dev
     working_dir: /usr/src/app
     volumes:
       - ${PATH_LOCAL}:/usr/src/app
     ports:
       - ${HOST_PORT}:${HOST_PORT}
     stdin_open: true # docker run -i
-    tty: true        # docker run -t
+    tty: true # docker run -t
     networks:
       backend:
         aliases:
-          - myzap_2dev
+          - alexandreclayton/myzap2-dev
 
-  myzap_2prod:
-    build: 
-      context: .
-      target: myzap_2prod
-    container_name: myzap_2prod
+#  myzap_2prod:
+#    build: 
+#      context: .
+#      target: myzap_2prod
+#    container_name: myzap_2prod
 #    image: gcr.io/maisagil/myzap
-    ports:
-      - ${HOST_PORT}:${HOST_PORT}
-    networks:
-      backend:
-        aliases:
-          - myzap_2prod
+#    ports:
+#      - ${HOST_PORT}:${HOST_PORT}
+#    networks:
+#      backend:
+#        aliases:
+#          - myzap_2prod
 networks:
   backend:
-    name: myzap_2network
+    name: alexandreclayton/myzap2-networks
