Ajustado Dockerfile e DockerCompose e package.json

--- a/package.json
+++ b/package.json
@@ -1,59 +1,59 @@
 {
-  "name": "myzap2.0",
-  "description": "<h1 align=\"center\">\r     <a href=\"\">🔗 MyZAP</a>\r </h1>\r <p align=\"center\">🚀 Permite a integração do WhatsApp com qualquer aplicação por meio de requisições POST/GET</p>",
-  "version": "1.0.0",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/edupoli/MyZap2.0.git"
-  },
-  "keywords": [
-    "whatsapp",
-    "api",
-    "nodejs",
-    "opensource",
-    "javascript",
-    "wppconnect",
-    "venom"
-  ],
-  "author": "Eduardo Policarpo",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/edupoli/MyZap2.0/issues"
-  },
-  "homepage": "https://github.com/edupoli/MyZap2.0#readme",
-  "dependencies": {
-    "@wppconnect-team/wppconnect": "^*",
-    "assert": "^*",
-    "async-get-file": "^*",
-    "axios": "^0.21.2",
-    "buffer-to-stream": "^1.0.0",
-    "cors": "^*",
-    "dotenv": "^*",
-    "ejs": "^*",
-    "express": "^*",
-    "ffmpeg": "^*",
-    "firebase": "^9.1.0",
-    "fluent-ffmpeg": "^*",
-    "form-data": "^3.0.1",
-    "mime-types": "^2.1.31",
-    "moment": "^*",
-    "qrcode": "^*",
-    "request": "^*",
-    "request-promise": "^*",
-    "serve-index": "^*",
-    "socket.io": "^*",
-    "superagent": "^*",
-    "superagent-queue": "^*",
-    "url-exists": "^*",
-    "valid-url": "^*",
-    "venom-bot": "^*",
-    "whatsapp-web.js": "^*",
-    "yoo-hoo": "^*"
-  }
+    "name": "myzap2.0",
+    "description": "<h1 align=\"center\">\r     <a href=\"\">🔗 MyZAP</a>\r </h1>\r <p align=\"center\">🚀 Permite a integração do WhatsApp com qualquer aplicação por meio de requisições POST/GET</p>",
+    "version": "1.0.0",
+    "main": "index.js",
+    "type": "module",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/edupoli/MyZap2.0.git"
+    },
+    "keywords": [
+        "whatsapp",
+        "api",
+        "nodejs",
+        "opensource",
+        "javascript",
+        "wppconnect",
+        "venom"
+    ],
+    "author": "Eduardo Policarpo",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/edupoli/MyZap2.0/issues"
+    },
+    "homepage": "https://github.com/edupoli/MyZap2.0#readme",
+    "dependencies": {
+        "@wppconnect-team/wppconnect": "^1.8.14",
+        "assert": "^2.0.0",
+        "async-get-file": "^1.0.4",
+        "axios": "^0.21.2",
+        "buffer-to-stream": "^1.0.0",
+        "cors": "^2.8.5",
+        "dotenv": "^10.0.0",
+        "ejs": "^3.1.6",
+        "express": "^4.17.1",
+        "ffmpeg": "^*",
+        "firebase": "^9.1.0",
+        "fluent-ffmpeg": "^ffmpeg",
+        "form-data": "^3.0.1",
+        "mime-types": "^2.1.31",
+        "moment": "^2.29.1",
+        "qrcode": "^1.4.4",
+        "request": "^2.88.2",
+        "request-promise": "^4.2.6",
+        "serve-index": "^1.9.1",
+        "socket.io": "^4.2.0",
+        "superagent": "^6.1.0",
+        "superagent-queue": "^0.0.3",
+        "url-exists": "^1.0.3",
+        "valid-url": "^*1.0.9",
+        "venom-bot": "^3.1.7",
+        "whatsapp-web.js": "^1.14.1",
+        "yoo-hoo": "^1.3.1"
+    }
 }
