--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: "3.5"
 services:
-  alexandreclayton/myzap2-dev:
+  alexandreclayton-myzap2-dev:
     build:
       context: .
-      target: alexandreclayton/myzap2-dev
-    container_name: alexandreclayton/myzap2-dev
+      target: alexandreclayton-myzap2-dev
+    container_name: alexandreclayton-myzap2-dev
     working_dir: /usr/src/app
     volumes:
       - ${PATH_LOCAL}:/usr/src/app
@@ -15,7 +15,7 @@ services:
     networks:
       backend:
         aliases:
-          - alexandreclayton/myzap2-dev
+          - alexandreclayton-myzap2-dev
 
 #  myzap_2prod:
 #    build: 
@@ -31,4 +31,7 @@ services:
 #          - myzap_2prod
 networks:
   backend:
-    name: alexandreclayton/myzap2-networks
+    name: alexandreclayton-myzap2-networks
+
+# Build
+# docker-compose up --build -d
