--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     },
     "homepage": "https://github.com/edupoli/MyZap2.0#readme",
     "dependencies": {
-        "@wppconnect-team/wppconnect": "^1.8.14",
+        "@wppconnect-team/wppconnect": "^1.10.0",
         "assert": "^2.0.0",
         "async-get-file": "^1.0.4",
         "axios": "^0.21.2",
@@ -37,9 +37,9 @@
         "dotenv": "^10.0.0",
         "ejs": "^3.1.6",
         "express": "^4.17.1",
-        "ffmpeg": "^*",
+        "ffmpeg": "^0.0.4",
         "firebase": "^9.1.0",
-        "fluent-ffmpeg": "^ffmpeg",
+        "fluent-ffmpeg": "^2.1.2",
         "form-data": "^3.0.1",
         "mime-types": "^2.1.31",
         "moment": "^2.29.1",
@@ -51,9 +51,9 @@
         "superagent": "^6.1.0",
         "superagent-queue": "^0.0.3",
         "url-exists": "^1.0.3",
-        "valid-url": "^*1.0.9",
-        "venom-bot": "^3.1.7",
-        "whatsapp-web.js": "^1.14.1",
+        "valid-url": "^1.0.9",
+        "venom-bot": "^4.0.1",
+        "whatsapp-web.js": "^1.15.1",
         "yoo-hoo": "^1.3.1"
     }
 }
