--- a/package.json
+++ b/package.json
@@ -47,13 +47,12 @@
         "request": "^2.88.2",
         "request-promise": "^4.2.6",
         "serve-index": "^1.9.1",
+        "sharp": "^0.33.2",
         "socket.io": "^4.2.0",
         "superagent": "^6.1.0",
         "superagent-queue": "^0.0.3",
         "url-exists": "^1.0.3",
         "valid-url": "^1.0.9",
-        "venom-bot": "^4.0.9",
-        "whatsapp-web.js": "^1.16.5",
         "yoo-hoo": "^1.3.1"
     }
 }
